booking ticket optimistic lock
